did bubble sort

--- a/Remove vowels.ipynb
+++ b/Remove vowels.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Cw'"
+       "'234bcd34343fjkm'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"remove all vowels\"\"\"\n",
+    "\"\"\"remove vowels\"\"\"\n",
+    "import re \n",
+    "def rem_vowel(string): \n",
+    "    return (re.sub(\"[aeiouAEIOU]\",\"\",string))             \n",
+    "  \n",
     "\n",
-    "def remove_vowel(string): \n",
-    "    vowels = ('a', 'e','i','o', 'u')  \n",
-    "    for x in string.lower(): \n",
-    "        if x in vowels: \n",
-    "            string = string.replace(x, '') \n",
-    "    return string\n",
-    "string = \"Cow\"\n",
-    "remove_vowel(string)"
+    "string = \"234Abcde34343fIjokUm\"\n",
+    "rem_vowel(string)"
    ]
   },
   {
@@ -35,6 +33,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
