--- a/Etremea.ipynb
+++ b/Etremea.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A': [-6, -1], 'B': [1, 4], 'C': [1, 5], 'D': [0.22, 54.11]}"
+       "{'A': [-6, -1, -3.2, -3],\n",
+       " 'B': [1, 4, 2.5, 2.5],\n",
+       " 'C': [1, 5, 3.25, 3.5],\n",
+       " 'D': [0.22, 54.11, 13.7275, 0.29000000000000004]}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,14 +42,17 @@
     "\"\"\"\n",
     "\"\"\"\"\"\"\n",
     "def find_extremae(data_dict):\n",
+    "    import statistics\n",
     "    x = len(data_dict)\n",
     "    out_dict = {}\n",
     "    \n",
     "    for j in data_dict:\n",
     "        minm = min(data_dict[j])\n",
     "        maxm = max(data_dict[j])\n",
-    "        \n",
-    "        out_dict[j] = [minm,maxm]\n",
+    "        mean = statistics.mean(data_dict[j])\n",
+    "        median = statistics.median(data_dict[j])\n",
+    "\n",
+    "        out_dict[j] = [minm,maxm,mean,median]\n",
     "    return out_dict\n",
     "\n",
     "\n",
