--- a/usaco/Broken Necklace/Code Juypter Notebook.ipynb
+++ b/usaco/Broken Necklace/Code Juypter Notebook.ipynb
@@ -65,6 +65,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['www', 'bb', 'r', 'w', 'r', 'b', 'r', 'b', 'rr', 'b', 'r', 'b', 'r', 'w', 'r', 'ww', 'r', 'b', 'w', 'r', 'w', 'rr', 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def beads(l1,l2):\n",
+    "    leng = l1\n",
+    "    tlisth = l2\n",
+    "    listh = re.findall(r'r+|b+|w+', tlisth)\n",
+    "    print(listh)\n",
+    "    \n",
+    "beads(29,\"wwwbbrwrbrbrrbrbrwrwwrbwrwrrb\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "test = 'wwwbbrrww'\n",
+    "match = re.findall(r'r+|b+|w+', test) #format re.findall(r'pattern', string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['www', 'bb', 'rr', 'ww']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
