--- a/usaco/Broken Necklace/Code Juypter Notebook.ipynb
+++ b/usaco/Broken Necklace/Code Juypter Notebook.ipynb
@@ -65,30 +65,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['www', 'bb', 'r', 'w', 'r', 'b', 'r', 'b', 'rr', 'b', 'r', 'b', 'r', 'w', 'r', 'ww', 'r', 'b', 'w', 'r', 'w', 'rr', 'b']\n"
+      "bbbbbrbrbrbrrbrbrbrbbrbbrbrrbbbbbbrbrbrbrrbrbrbrbbrbbrbrrb\n",
+      "rrrbbrrrbrbrrbrbrrrrrrbrrrrrbrrrbbrrrbrbrrbrbrrrrrrbrrrrrb\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "expected string or bytes-like object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-bfa144cea985>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mbeads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m29\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"wwwbbrwrbrbrrbrbrwrwwrbwrwrrb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-23-bfa144cea985>\u001b[0m in \u001b[0;36mbeads\u001b[1;34m(l1, l2)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mlisth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'r+|b+|w+'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlisth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mlisthB\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'r+|b+|w+'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlisthB\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[0mlisthR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'r+|b+|w+'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlisthR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\re.py\u001b[0m in \u001b[0;36mfindall\u001b[1;34m(pattern, string, flags)\u001b[0m\n\u001b[0;32m    221\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    222\u001b[0m     Empty matches are included in the result.\"\"\"\n\u001b[1;32m--> 223\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    224\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    225\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfinditer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object"
      ]
     }
    ],
    "source": [
+    "\n",
+    "import re\n",
     "def beads(l1,l2):\n",
-    "    leng = l1\n",
-    "    tlisth = l2\n",
-    "    listh = re.findall(r'r+|b+|w+', tlisth)\n",
-    "    print(listh)\n",
+    "    leng = int(l1)\n",
+    "    listh = l2\n",
+    "    listh = l2 + l2\n",
+    "    \n",
+    "    listhB = None #stores white beads replaced with blue beads\n",
+    "    listhR = None #sotres white beads replaced with red beads\n",
+    "    \n",
+    "   # if 'w' in listh:\n",
+    "        #check if listh contains white beads\n",
+    "    listB = re.sub(\"[w]\",\"b\",listh)\n",
+    "    print(listB)\n",
+    "    listR = re.sub(\"[w]\",\"r\",listh)\n",
+    "    print(listR)\n",
+    "        \n",
+    "    listh = re.findall(r'r+|b+|w+', listh)\n",
+    "    listhB = re.findall(r'r+|b+|w+', listhB)\n",
+    "    listhR = re.findall(r'r+|b+|w+', listhR)\n",
+    "        \n",
+    "    print(listhB)\n",
+    "    working = True\n",
+    "    \n",
+    "    while working==False:\n",
+    "        pass\n",
+    "            \n",
     "    \n",
     "beads(29,\"wwwbbrwrbrbrrbrbrwrwwrbwrwrrb\")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
